payments.yaml
# =============================================================
# Service: flask-payment-app-service
# =============================================================
apiVersion: v1
kind: Service
metadata:
  name: flask-payment-app-service             # Name of the Service resource

spec:
  selector:
    app: flask-payment-app                    # Route traffic to Pods with label app=flask-payment-app

  ports:
    - protocol: TCP                  # Use TCP protocol for HTTP traffic
      port: 80                       # External port (clients connect here)
      targetPort: 8000              # Forward traffic to container port 8000

---
# =============================================================
# Ingress: flask-payment-app-ingress (Uses nginx)
# =============================================================
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-payment-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /flask-payment-app/api/?(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: flask-payment-app-service
                port:
                  number: 80
